# bender

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cleanup_orphaned.py  docker-compose.yml  pyproject.toml  requirements.txt  test_bender_done.txt  test_controller.py
.github/workflows/: ci.yml
bender/: __init__.py  analyzer.py  base_client.py  console_recovery.py  context_manager.py  enforcer.py  gemini_client.py  glm_client.py  llm_router.py  log_filter.py  log_watcher.py  review_loop.py  supervisor.py  task_clarifier.py  task_manager.py  utils.py  watchdog.py  worker_manager.py
bender.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bender/workers/: __init__.py  base.py  codex.py  copilot.py  droid.py  interactive_copilot.py
bender_cli/: display.py  main.py
cli/: __init__.py  display.py  main.py
core/: __init__.py  audit.py  config.py  droid_controller.py  exceptions.py  health.py  logging_config.py  metrics.py
docs/: ARCHITECTURE.md  EPICS.md
integrations/: __init__.py  base.py  slack.py  telegram.py
parser_maker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pipeline/: __init__.py  git_manager.py  orchestrator.py  step.py
state/: __init__.py  persistence.py  recovery.py
steps/: parser_steps.yaml
tests/: __init__.py  test_bender.py  test_core.py  test_pipeline.py  test_state.py
