[project]
name = "parser-maker"
version = "0.1.0"
description = "Автоматизация создания парсеров через LLM с 6-шаговым pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.scripts]
parser-maker = "cli.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "bender*", "pipeline*", "state*", "cli*", "steps*"]
